{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 15,
  "lineage": "be527477-4b96-106c-0668-0cf0f4e2eb6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:internet-gateway/igw-0f951e2666ebd1dc0",
            "id": "igw-0f951e2666ebd1dc0",
            "owner_id": "891377328903",
            "tags": {
              "Name": "terra-IGW"
            },
            "tags_all": {
              "Name": "terra-IGW"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:route-table/rtb-0e4bc3654e1b3f7ba",
            "id": "rtb-0e4bc3654e1b3f7ba",
            "owner_id": "891377328903",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f951e2666ebd1dc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-pub-RT"
            },
            "tags_all": {
              "Name": "terra-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-RT-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0608905c76ed9122a",
            "route_table_id": "rtb-0e4bc3654e1b3f7ba",
            "subnet_id": "subnet-0c454af315ccc88b9"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-1",
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-RT-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d18f44045c1b1675",
            "route_table_id": "rtb-0e4bc3654e1b3f7ba",
            "subnet_id": "subnet-05ad77adc712f0039"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-2",
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-RT-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0ddec096abf038",
            "route_table_id": "rtb-0e4bc3654e1b3f7ba",
            "subnet_id": "subnet-0ffdf674f25da6889"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-3",
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_new_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:security-group/sg-09246c1c9dbad8832",
            "description": "Sec Group for terraform ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09246c1c9dbad8832",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra_new_sg",
            "name_prefix": "",
            "owner_id": "891377328903",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh"
            },
            "tags_all": {
              "Name": "allow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-0ccedfd7aaef56dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccedfd7aaef56dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-1"
            },
            "tags_all": {
              "Name": "terra-priv-1"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-0747f2705777e0368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0747f2705777e0368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-2"
            },
            "tags_all": {
              "Name": "terra-priv-2"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-0043dbcc5c9697bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0043dbcc5c9697bf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-3"
            },
            "tags_all": {
              "Name": "terra-priv-3"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-0c454af315ccc88b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c454af315ccc88b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-1"
            },
            "tags_all": {
              "Name": "terra-pub-1"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-05ad77adc712f0039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ad77adc712f0039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-2"
            },
            "tags_all": {
              "Name": "terra-pub-2"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:subnet/subnet-0ffdf674f25da6889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffdf674f25da6889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377328903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-3"
            },
            "tags_all": {
              "Name": "terra-pub-3"
            },
            "vpc_id": "vpc-06058d2a9fbb6e4d2"
          },
          "dependencies": [
            "aws_vpc.teraa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "teraa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328903:vpc/vpc-06058d2a9fbb6e4d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074514a34eadd96ea",
            "default_route_table_id": "rtb-0908b6e98678baa01",
            "default_security_group_id": "sg-04b0a925263b80876",
            "dhcp_options_id": "dopt-0cad78e7aa8d444d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06058d2a9fbb6e4d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0908b6e98678baa01",
            "owner_id": "891377328903",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}